# goit-pythonweb-hw-01

./: factory_task_1.py  library_solid_task_2.py  pyproject.toml
