[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "В обох завданнях необхідно застосувати типізацію. Замість оператора print слід використовувати логування на рівні INFO. Для форматування коду використовуйте black."
authors = [
    {name = "Iryna",email = "100072177+IrynaSabinina@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
